# aef-embeddings

./: .gitignore  LICENSE  README.md  pyproject.toml
src/aef_embeddings/: __init__.py  _checkpoint.py  _geo.py  _logging.py  _request.py  _types.py  cli.py  store.py
src/examples/: example.py
tests/: test_store.py
